[gd_scene load_steps=6 format=3 uid="uid://ccnf1dy8ajc4d"]

[ext_resource type="Script" path="res://scanes/main/main.gd" id="1_ioisu"]
[ext_resource type="PackedScene" uid="uid://brkypfgwk5q6m" path="res://scanes/hud/hud.tscn" id="3_p3akf"]
[ext_resource type="AudioStream" uid="uid://q2pf4fr8d0ks" path="res://art/House In a Forest Loop.ogg" id="4_w2sfw"]
[ext_resource type="AudioStream" uid="uid://dw26fpygeag8o" path="res://art/gameover.wav" id="5_70t84"]

[sub_resource type="Curve2D" id="Curve2D_8bn2c"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -3, 1, 0, 0, 0, 0, 476, 0, 0, 0, 0, 0, 478, 642, 0, 0, 0, 0, -2, 637, 0, 0, 0, 0, -3, 1)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_ioisu")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.11, 0.11, 1)

[node name="PlayerSpawnPosition" type="Marker2D" parent="."]
position = Vector2(240, 320)

[node name="Timers" type="Node" parent="."]

[node name="EnemyTimer" type="Timer" parent="Timers"]

[node name="ScoreTimer" type="Timer" parent="Timers"]

[node name="StartTimer" type="Timer" parent="Timers"]
wait_time = 2.0

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_8bn2c")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(-3, 1)
rotation = -0.00208768

[node name="EnemeyContainer" type="Node2D" parent="."]

[node name="HUD" parent="." instance=ExtResource("3_p3akf")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_w2sfw")

[node name="Game over sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_70t84")

[connection signal="timeout" from="Timers/EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="Timers/ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="Timers/StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
